--- a/package.json
+++ b/package.json
@@ -14,30 +14,24 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.18.0",
-		"@iconify/svelte": "^4.2.0",
-		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/postcss": "^4.0.0",
-		"daisyui": "^5.0.3",
-		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^2.46.1",
-		"globals": "^15.14.0",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"sass-embedded": "^1.83.4",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.20.0",
-		"vite": "^5.4.11"
-	},
-	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.8"
+		"@eslint/js": "^9.30.1",
+		"@iconify/svelte": "^5.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.22.2",
+		"@sveltejs/vite-plugin-svelte": "^5.1.0",
+		"@tailwindcss/vite": "^4.1.11",
+		"daisyui": "^5.0.46",
+		"eslint": "^9.30.1",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-svelte": "^3.10.1",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.6.13",
+		"sass-embedded": "^1.89.2",
+		"svelte": "^5.35.4",
+		"svelte-check": "^4.2.2",
+		"tailwindcss": "^4.1.11",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.36.0"
 	}
 }
