--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -25,10 +25,10 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Build SvelteKit app
-        run: npm run build
+        run: pnpm run build
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
