--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.30.1",
-		"@iconify/svelte": "^5.0.0",
-		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.22.2",
-		"@sveltejs/vite-plugin-svelte": "^5.1.0",
-		"@tailwindcss/vite": "^4.1.11",
-		"daisyui": "^5.0.46",
-		"eslint": "^9.30.1",
-		"eslint-config-prettier": "^10.1.5",
-		"eslint-plugin-svelte": "^3.10.1",
+		"@eslint/compat": "^1.4.0",
+		"@eslint/js": "^9.38.0",
+		"@iconify/svelte": "^5.0.2",
+		"@sveltejs/adapter-static": "^3.0.10",
+		"@sveltejs/kit": "^2.47.2",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tailwindcss/vite": "^4.1.15",
+		"daisyui": "^5.3.7",
+		"eslint": "^9.38.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.12.5",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.6.13",
-		"sass-embedded": "^1.89.2",
-		"svelte": "^5.35.4",
-		"svelte-check": "^4.2.2",
-		"tailwindcss": "^4.1.11",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.36.0"
+		"prettier-plugin-tailwindcss": "^0.6.14",
+		"sass-embedded": "^1.93.2",
+		"svelte": "^5.41.1",
+		"svelte-check": "^4.3.3",
+		"tailwindcss": "^4.1.15",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.46.2",
+		"vite": "^7.1.11"
 	}
 }
