--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install dependencies
         run: pnpm install
 
@@ -35,7 +38,7 @@ jobs:
         with:
           name: build
           path: build
-          
+
   deploy:
     needs: build
     environment:
